fixed and reorganised version unsufull fixing code in one single cell loading paths for all energies for the future still a lot of output from plotly...

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -25,11 +25,17 @@
     "\r\n",
     "import plotly.graph_objects as go\r\n",
     "\r\n",
-    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\r\n",
+    "plt.style.use(hep.style.T defaults to CMS\n",
+    "\n",
+    "ROOT) # For now ROOpath1 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
+    "path2 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=4.0T de33faults to CMS\r\n",
     "\r\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\r\n",
-    "all_files = glob.glob(pat\n",
-    "cosphi_th = []h + \"/*.dat\")\r\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFM6.0eV' # use your pathX1enant=S_hel=+1_KE=3\n",
+    "path4 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=8.2eV' # use your path\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11..all_files = glob.glob(path + \"/*.dat\") \n",
+    "li = []\n",
+    " b(pat\n",
+    "cosphi_i + \"/*.dat\")\r\n",
     "\r\n",
     "li = []\r\n",
     "colnames=[\"phi\",\"cos(theta)\",\"value\"] \r\n",
@@ -39,64 +45,55 @@
     "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \r\n",
     "    # or delim_whitespace=True, it is faste\r\n",
     "    # r\"\\s+\" is a regex (regular expression)\r\n",
-    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\r\n",
-    "    df[\"filename\"]=df[\"filename\"].str.repl\n",
-    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]),int(df[\"filename\"].str.split(\"_\")[0][1])))ace(\" \",\"\") # corrects for spaces\r\n",
-    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\r\n",
-    "    \n",
+    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
+    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]),int(df[\"filename\"].str.split(\"_\")[0][1])))\n",
+    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
+    "    li.append(df) # a unique DataFrame)\n",
     "cosphi_th=np.array(cosphi_th)li.append(df) # a unique DataFrame\r\n",
     "\r\n",
     "frame = pd.concat(li, axis=0)\r\n",
     "frame_srt=frame.groupby(\"filename\")\r\n",
     "frame.loc[frame[\"filename\"] == \"1_1\"] # first way of selecting the right file\r\n",
-    "frame_set = frame.set_index(\"filename\") # build a multiindex using the categories of filename\r\n",
+    "frame_set = frame.set_index(\"filename\") # build a mul\n",
+    "\n",
+    "# converting to numpy arrays to plot: here full, in 72 MFPADs .unique()tiindex using the categories of filename\r\n",
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\r\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\r\n",
-    "counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\r\n",
-    "\r\n",
-    "#Forcing the values at the edges of +-phi to be the same avg\r\n",
-    "test11=frame.loc[frame[\"filename\"] == \"1_1\"]\r\n",
-    "a1=test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"].to_numpy()\r\n",
-    "b1=test11.loc[test11[\"phi\"] == np.max(phi)][\"value\"].to_numpy()\r\n",
-    "avgphi=np.divide(a1+b1,2)\r\n",
-    "avgphi=np.pad(avgphi, (0,len(phi)-len(avgphi)), 'constant', constant_values=0)\r\n",
-    "# avgphipd = pd.Series(avgphi)\r\n",
-    "test11[\"value\"].mask(test11[\"phi\"] == np.min(phi), avgphi, inplace=True)\r\n",
-    "test11[\"value\"].mask(test11[\"phi\"] == np.max(phi), avgphi, inplace=True)\r\n",
-    "\r\n",
-    "#Forcing the values at the edges of +-ctheta to be the same avg\r\n",
-    "a2=test11.loc[test11[\"cos(theta)\"] == np.min(ctheta)][\"value\"].to_numpy()\r\n",
-    "b2=test11.loc[test11[\"cos(theta)\"] == np.max(ctheta)][\"value\"].to_numpy()\r\n",
-    "avgcos=np.divide(a2+b2,2)\r\n",
-    "avgcos=np.pad(avgcos, (0,len(ctheta)-len(avgcos)), 'constant', constant_values=0)\r\n",
-    "# avgcospd = pd.Series(avgcos)\r\n",
-    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.min(ctheta), avgcos, inplace=True)\r\n",
-    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.max(ctheta), avgcos, inplace=True)\r\n",
-    "\r\n",
-    "counts_fixed = test11.iloc[:,2].to_numpy()\r\n",
-    "phi_fixed = np.where(phi==np.min(phi), -180., phi) #the last is an else\r\n",
-    "phi_fixed = np.where(phi==np.max(phi), 180., phi_fixed)\r\n",
-    "ctheta_fixed = np.where(ctheta==np.min(ctheta), -1., ctheta)\r\n",
-    "ctheta_fixed = np.where(ctheta==np.max(ctheta), 1., ctheta_fixed)\r\n",
-    "# print(np.unique(phi_fixed))\r\n",
-    "\r\n",
-    "theta_rad = np.arccos(ctheta)\r\n",
-    "# theta_rad = np.arccos(ctheta_fixed)\r\n",
-    "phi_rad = phi * np.pi/180.\r\n",
-    "# phi_rad = phi_fixed * np.pi/180.\r\n",
-    "countsn = counts\r\n",
-    "# countsn = counts_fixed\r\n",
-    "\r\n",
-    "# convertion to spherical coordinates 1D vectors of shape (20000,1)\r\n",
-    "x = countsn * np.sin(theta_rad) * np.cos(phi_rad)\r\n",
-    "X = x.reshape(200,100)\r\n",
-    "y = countsn * np.sin(theta_rad) * np.sin(phi_rad)\r\n",
-    "Y = y.reshape(200,100)\r\n",
-    "z = countsn * np.cos(theta_rad)\r\n",
-    "Z = z.reshape(200,100)\r\n",
+    "ctheta = frame.loc[frame[\"filename\"] == \"1counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # countse.loc[frame[\"filenam= z.reshape(200,100)\r\n",
     "\r\n",
     "d = np.sqrt(x**2+y**2+z**2)\r\n",
     "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#first attempt to fix the stripe: NOT WORKING\n",
+    "#Forcing the values at the edges of +-phi to be the same avg\n",
+    "test11=frame.loc[frame[\"filename\"] == \"1_1\"]\n",
+    "a1=test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"].to_numpy()\n",
+    "b1=test11.loc[test11[\"phi\"] == np.max(phi)][\"value\"].to_numpy()\n",
+    "avgphi=np.divide(a1+b1,2)\n",
+    "avgphi=np.pad(avgphi, (0,len(phi)-len(avgphi)), 'constant', constant_values=0)\n",
+    "# avgphipd = pd.Series(avgphi)\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.min(phi), avgphi, inplace=True)\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.max(phi), avgphi, inplace=True)\n",
+    "\n",
+    "#Forcing the values at the edges of +-ctheta to be the same avg\n",
+    "a2=test11.loc[test11[\"cos(theta)\"] == np.min(ctheta)][\"value\"].to_numpy()\n",
+    "b2=test11.loc[test11[\"cos(theta)\"] == np.max(ctheta)][\"value\"].to_numpy()\n",
+    "avgcos=np.divide(a2+b2,2)\n",
+    "avgcos=np.pad(avgcos, (0,len(ctheta)-len(avgcos)), 'constant', constant_values=0)\n",
+    "# avgcospd = pd.Series(avgcos)\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.min(ctheta), avgcos, inplace=True)\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.max(ctheta), avgcos, inplace=True)\n",
+    "\n",
+    "counts_fixed = test11.iloc[:,2].to_numpy()\n",
+    "phi_fixed = np.where(phi==np.min(phi), -180., phi) #the last is an else\n",
+    "phi_fixed = np.where(phi==np.max(phi), 180., phi_fixed)\n",
+    "ctheta_fixed = np.where(ctheta==np.min(ctheta), -1., ctheta)\n",
+    "ctheta_fixed = np.where(ctheta==np.max(ctheta), 1., ctheta_fixed)\n",
+    "# print(np.unique(phi_fixed))"
    ]
   },
   {
@@ -104,6 +101,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#convertion to cartesian coordinate\n",
+    "theta_rad = np.arccos(ctheta)\n",
+    "# theta_rad = np.arccos(ctheta_fixed)\n",
+    "phi_rad = phi * np.pi/180.\n",
+    "# phi_rad = phi_fixed * np.pi/180.\n",
+    "countsn = counts\n",
+    "# countsn = counts_fixed\n",
+    "\n",
+    "# convertion to spherical coordinates 1D vectors of shape (20000,1)\n",
+    "x = countsn * np.sin(theta_rad) * np.cos(phi_rad)\n",
+    "X = x.reshape(200,100)\n",
+    "y = countsn * np.sin(theta_rad) * np.sin(phi_rad)\n",
+    "Y = y.reshape(200,100)\n",
+    "z = countsn * np.cos(theta_rad)\n",
+    "Z = z.reshape(200,100)\n",
+    "\n",
+    "d = np.sqrt(x**2+y**2+z**2)\n",
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "fig=plt.figure()\r\n",
     "fig.show()\r\n",
