semms just the same file but run completly

--- a/b1_map_CH11.ipynb
+++ b/b1_map_CH11.ipynb
@@ -835,13 +835,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3.8.6 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit"
+   "name": "Python 3.8.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
