--- a/3D_MFPADs_CH9_experiment.ipynb
+++ b/3D_MFPADs_CH9_experiment.ipynb
@@ -24,7 +24,7 @@
     "#for the cartesian product\n",
     "import itertools\n",
     "\n",
-    "#to average the MFPADs\n",
+    "#to smooth the MFPADs\n",
     "import scipy as sp\n",
     "import scipy.ndimage\n",
     "\n",
