smoothgaus function added (also on CH11)

--- a/72_2D_MFPADs_CH9_experiment.ipynb
+++ b/72_2D_MFPADs_CH9_experiment.ipynb
@@ -19,6 +19,10 @@
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
     "\n",
+    "#to smooth the MFPADs\n",
+    "import scipy as sp\n",
+    "import scipy.ndimage\n",
+    "\n",
     "import re\n",
     "\n",
     "import mplhep as hep\n",
@@ -66,6 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def smoothgauss(MFPAD, sigmax, sigmay):\n",
+    "    \"\"\"\n",
+    "    Fucntion the smooths with a 2D gaussian function 2D matrixes. For the experiments\n",
+    "    x = cos(theta), y = phi. Phi is twice ctheta and sigma should be the same.\n",
+    "    \"\"\"\n",
+    "    # NOTE: the right order is y,x (from stackoverflow)\n",
+    "    sigma = [sigmay,sigmax] \n",
+    "    Y = sp.ndimage.filters.gaussian_filter(MFPAD, sigma, mode=\"constant\")\n",
+    "    return Y\n",
+    "\n",
     "def sorting_array(inarray, cosphi, a):\n",
     "    \"\"\"\n",
     "    a is the level according to which values have to be sorted: 1 = cos_light, 2 = phi_light\n",
