added search function and removed large MFPADs outputs

--- a/3D_MFPADs_CH9_experiment.ipynb
+++ b/3D_MFPADs_CH9_experiment.ipynb
@@ -124,6 +124,37 @@
     "    Y = sp.ndimage.filters.gaussian_filter(MFPAD, sigma, mode=\"constant\")\n",
     "    return Y\n",
     "\n",
+    "def shift_func(a, flag=0.):\n",
+    "    \"\"\"\n",
+    "    shifts a linearly monotally increasing array of the average of the first two elements, either along columns or rows.\n",
+    "    It is manly used to plot cosphi[:,0] in b1 maps. cosphi is an array of tuple [(ctheta,phi)].\n",
+    "    \"\"\"\n",
+    "    #if it is a list = 72\n",
+    "    if a.shape[0]>12:\n",
+    "        c=a.reshape(12,6)\n",
+    "        flag=1.\n",
+    "        # if the first two elements of the first row are equal,\n",
+    "        # pick the first two elements along the first column\n",
+    "        # and computer the average. This number is the same for all elements of the array\n",
+    "        if c[0][0] == c[0][1]:\n",
+    "            b=(c[1][0]-c[0][0])/2\n",
+    "            a=np.add(c,b)\n",
+    "        else:\n",
+    "            b=(c[0][1]-c[0][0])/2\n",
+    "            a=np.add(c,b)\n",
+    "    else:\n",
+    "        if a[0][0] == a[0][1]:\n",
+    "            b=(a[1][0]-a[0][0])/2\n",
+    "            a=np.add(a,b)\n",
+    "        else:\n",
+    "            b=(a[0][1]-a[0][0])/2\n",
+    "            a=np.add(a,b)\n",
+    "    if flag == 1.:\n",
+    "        # a=np.ravel(a)\n",
+    "        # it returns an array with dimension (n,)\n",
+    "        a=a.reshape(-1)\n",
+    "    return a\n",
+    "\n",
     "def cosphi_func(key, cosphi):\n",
     "    ctheta_nc = float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
     "    phi_nc = float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
@@ -230,12 +261,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#look to the values in b1 map and found the MFPAD\n",
+    "cosphi_sh=list(zip(shift_func(cosphi[:,0]),shift_func(cosphi[:,1])))\n",
+    "df=pd.DataFrame(cosphi_sh, columns=[\"ctheta\",\"phi\"])\n",
+    "df.loc[df[\"phi\"] == -135]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#insert hier the corrispondent index number coming from the comparison with the b1 map values\n",
+    "checkthis=31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1,3, figsize=(20, 6.5),sharex='col')\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
-    "ax[0].contourf(phi_ang.reshape(c,p),ctheta_adm.reshape(c,p),MFPAD_RCL[0].T)\n",
-    "ax[1].contourf(phiM,cosM,MFPAD_RCL[0].T) #has to be transposed becasue how it has been defined in lmf2root\n",
-    "ax[2].contourf(cosM,phiM,MFPAD_RCL[0]) #this is the original x=ctheta, y=phi\n",
+    "ax[0].contourf(phi_ang.reshape(c,p),ctheta_adm.reshape(c,p),MFPAD_RCL[checkthis].T)\n",
+    "ax[1].contourf(phiM,cosM,MFPAD_RCL[checkthis].T) #has to be transposed becasue how it has been defined in lmf2root\n",
+    "ax[2].contourf(cosM,phiM,MFPAD_RCL[checkthis]) #this is the original x=ctheta, y=phi\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -249,7 +302,7 @@
    "outputs": [],
    "source": [
     "#as specified later, sigma phi is double sigma x\n",
-    "plt.contourf(phi_ang.reshape(c,p),ctheta_adm.reshape(c,p),smoothgauss(MFPAD_RCL[0],0.3,0.6).T)\n",
+    "plt.contourf(phi_ang.reshape(c,p),ctheta_adm.reshape(c,p),smoothgauss(MFPAD_RCL[checkthis],0.3,0.6).T)\n",
     "plt.legend(loc=\"best\")"
    ]
   },
@@ -261,7 +314,7 @@
    "source": [
     "#from spherical to cartesian coordinates\n",
     "\n",
-    "counts=MFPAD_RCR[0].reshape(-1)\n",
+    "counts=MFPAD_RCR[checkthis].reshape(-1)\n",
     "x = counts * np.sin(theta_rad) * np.cos(phi_rad)\n",
     "X = x.reshape(p,c)\n",
     "y = counts * np.sin(theta_rad) * np.sin(phi_rad)\n",
@@ -283,7 +336,7 @@
     "#SMOOTHED by sigmax (ctheta) and sigmay (phi)\n",
     "# sigma phi (y) can be double the value of x \n",
     "\n",
-    "counts=smoothgauss(MFPAD_RCR[0],0.3,0.6).reshape(-1)\n",
+    "counts=smoothgauss(MFPAD_RCR[checkthis],0.3,0.6).reshape(-1)\n",
     "xs = counts * np.sin(theta_rad) * np.cos(phi_rad)\n",
     "Xs = xs.reshape(p,c)\n",
     "ys = counts * np.sin(theta_rad) * np.sin(phi_rad)\n",
@@ -390,24 +443,6 @@
     "                # margin=dict(l=65, r=50, b=65, t=90))\n",
     "                  margin=dict(l=0, r=0, b=0, t=0))\n",
     "figsurfs.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "fig, axes = plt.subplots(6,12, figsize=(25, 12), sharex='col', sharey='row')\n",
-    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
-    "\n",
-    "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
-    "for i,ax in zip(range(72),axes.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,MFPAD_RCL[i].T)\n",
-    "    \n",
-    "fig.tight_layout()\n",
-    "plt.show()"
    ]
   },
   {
