fixed the glitch and the search option ocn cosphi_th

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -6,62 +6,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\r\n",
-    "import math\r\n",
-    "import uproot\r\n",
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "import pkgutil\r\n",
-    "import uproot_methods\r\n",
-    "\r\n",
-    "import matplotlib as mpl\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "from matplotlib.colors import LightSource\r\n",
-    "%matplotlib inline\r\n",
-    "\r\n",
-    "import mplhep as hep\r\n",
-    "from mpl_toolkits.mplot3d import Axes3D\r\n",
-    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\r\n",
-    "\r\n",
-    "import plotly.graph_objects as go\r\n",
-    "\r\n",
-    "plt.style.use(hep.style.T defaults to CMS\n",
+    "import glob\n",
+    "import math\n",
+    "import uproot\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pkgutil\n",
+    "import uproot_methods\n",
     "\n",
-    "ROOT) # For now ROOpath1 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
-    "path2 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=4.0T de33faults to CMS\r\n",
-    "\r\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFM6.0eV' # use your pathX1enant=S_hel=+1_KE=3\n",
-    "path4 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=8.2eV' # use your path\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11..all_files = glob.glob(path + \"/*.dat\") \n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LightSource\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import mplhep as hep\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "plt.style.use(hep.style.ROOT)  # For now ROOT defaults to CMS\n",
+    "\n",
+    "path1 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV'  # use your path\n",
+    "path2 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=4.0eV'  # use your path\n",
+    "path3 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=6.1eV'  # use your path\n",
+    "path4 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=8.2eV'  # use your path\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11.5eV'  # use your path\n",
+    "all_files = glob.glob(path + \"/*.dat\")\n",
+    "\n",
     "li = []\n",
-    " b(pat\n",
-    "cosphi_i + \"/*.dat\")\r\n",
-    "\r\n",
-    "li = []\r\n",
-    "colnames=[\"phi\",\"cos(theta)\",\"value\"] \r\n",
-    "\r\n",
-    "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/\r\n",
-    "for filename in all_files:\r\n",
-    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \r\n",
-    "    # or delim_whitespace=True, it is faste\r\n",
-    "    # r\"\\s+\" is a regex (regular expression)\r\n",
-    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
-    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]),int(df[\"filename\"].str.split(\"_\")[0][1])))\n",
-    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
-    "    li.append(df) # a unique DataFrame)\n",
-    "cosphi_th=np.array(cosphi_th)li.append(df) # a unique DataFrame\r\n",
-    "\r\n",
-    "frame = pd.concat(li, axis=0)\r\n",
-    "frame_srt=frame.groupby(\"filename\")\r\n",
-    "frame.loc[frame[\"filename\"] == \"1_1\"] # first way of selecting the right file\r\n",
-    "frame_set = frame.set_index(\"filename\") # build a mul\n",
+    "cosphi_th = []\n",
+    "colnames = [\"phi\", \"cos(theta)\", \"value\"]\n",
     "\n",
-    "# converting to numpy arrays to plot: here full, in 72 MFPADs .unique()tiindex using the categories of filename\r\n",
-    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\r\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # countse.loc[frame[\"filenam= z.reshape(200,100)\r\n",
-    "\r\n",
-    "d = np.sqrt(x**2+y**2+z**2)\r\n",
-    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+    "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/,\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \n",
+    "    # or delim_whitespace=True, it is faste\n",
+    "    # r\"\\s+\" is a regex (regular expression)\n",
+    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\n",
+    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
+    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]), int(df[\"filename\"].str.split(\"_\")[0][1])))\n",
+    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
+    "    li.append(df) # a unique DataFrame\n",
+    "\n",
+    "cosphi_th = np.array(cosphi_th)\n",
+    "frame = pd.concat(li, axis=0)\n",
+    "frame_srt = frame.groupby(\"filename\")\n",
+    "\n",
+    "frame = pd.concat(li, axis=0)\n",
+    "frame_srt = frame.groupby(\"filename\")\n",
+    "frame.loc[frame[\"filename\"] == \"1_1\"]  # first way of selecting the right file\n",
+    "frame_set = frame.set_index(\"filename\")  # build a mul\n",
+    "\n",
+    "# converting to numpy arrays to plot: here full, in 72 MFPADs .unique()tiindex using the categories of filename\n",
+    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 0].to_numpy()  # phi\n",
+    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 1].to_numpy()  # cos(theta)\n",
+    "counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 2].to_numpy()  # counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remap(b,lim1_low,lim1_high,lim2_low,lim2_high):\n",
+    "    \"\"\"\n",
+    "    Remaps the np array b to the new interval [lim_low,lim_high]\n",
+    "    \"\"\"\n",
+    "    col1=np.array([col[0] for col in b])\n",
+    "    col2=np.array([col[1] for col in b])\n",
+    "    col1 = lim1_low + np.divide(lim1_high-lim1_low , np.amax(col1)-np.amin(col1)) * (col1-np.amin(col1))\n",
+    "    col2 = lim2_low + np.divide(lim2_high-lim2_low , np.amax(col2)-np.amin(col2)) * (col2-np.amin(col2))\n",
+    "    b=zip(col1,col2)\n",
+    "    # b=np.around(b,3)\n",
+    "    return b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#look to the values in b1 map and found the MFPAD\n",
+    "cosphi_adj=list(remap(cosphi_th,-0.835,0.835,-165,165))\n",
+    "cosphi_adj=np.around(cosphi_adj,3)\n",
+    "\n",
+    "df=pd.DataFrame(cosphi_adj, columns=[\"ctheta\",\"phi\"])\n",
+    "df.loc[df[\"phi\"] == -15]"
    ]
   },
   {
@@ -291,13 +324,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
