added the gaussian smoothing

--- a/72_2D_MFPADs_CH9_experiment.ipynb
+++ b/72_2D_MFPADs_CH9_experiment.ipynb
@@ -231,7 +231,8 @@
    "source": [
     "print(MFPAD_RCR.shape)\n",
     "print(MFPAD_RCR.max())\n",
-    "print(MFPAD_RCR.min())"
+    "print(MFPAD_RCR.min())\n",
+    "print(np.amax(MFPAD_RCR))"
    ]
   },
   {
@@ -361,6 +362,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), sharex='col', sharey='row')\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "\n",
+    "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
+    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "    ax.contourf(phiM,cosM,smoothgauss(MFPAD_RCR_cos[i],0.3,0.6).T)\n",
+    "    ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    \n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -406,8 +426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
@@ -426,8 +446,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
@@ -446,8 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
@@ -471,13 +491,46 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "fig = go.Figure()\n",
+    "endrange=np.amax(MFPAD_RCR_cos)\n",
     "\n",
+    "fig = go.Figure()\n",
     "fig = make_subplots(rows=6, cols=12, vertical_spacing=0.015)\n",
     "\n",
     "for i in range(12):\n",
     "    for j in range(6):\n",
-    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=24., size=6)), row=j+1, col=i+1)\n",
+    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10), row=j+1, col=i+1))\n",
+    "    \n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=True,\n",
+    "    width=1000,\n",
+    "    # height=1500,\n",
+    "    margin=dict(l=0,r=0,b=25,t=25)\n",
+    "    )\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6!\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "endrange=np.amax(smoothgauss(MFPAD_RCR_cos,0.3,0.6))\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig = make_subplots(rows=6, cols=12, vertical_spacing=0.015)\n",
+    "\n",
+    "for i in range(12):\n",
+    "    for j in range(6):\n",
+    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=smoothgauss(MFPAD_RCR_cos[j+i*6],0.3,0.6).T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10)), row=j+1, col=i+1)\n",
     "    \n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -494,13 +547,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -512,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
