--- a/72_2D_MFPADs_CH9_experiment.ipynb
+++ b/72_2D_MFPADs_CH9_experiment.ipynb
@@ -498,7 +498,7 @@
     "\n",
     "for i in range(12):\n",
     "    for j in range(6):\n",
-    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10), row=j+1, col=i+1))\n",
+    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10), row=j+1, col=i+1)\n",
     "    \n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
