svg inline magic command

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -18,6 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"svg\"]\n",
     "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
