flexible search option included

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -37,10 +37,13 @@
     "\n",
     "li = []\n",
     "cosphi_th = []\n",
+    "test_opening = []\n",
+    "allnames=[]\n",
     "colnames = [\"phi\", \"cos(theta)\", \"value\"]\n",
     "\n",
     "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/,\n",
     "for filename in all_files:\n",
+    "    test_opening.append(filename) #to verify the semantic order 1_1 -> 1_2 and not 1_10\n",
     "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \n",
     "    # or delim_whitespace=True, it is faste\n",
     "    # r\"\\s+\" is a regex (regular expression)\n",
@@ -52,17 +55,10 @@
     "\n",
     "cosphi_th = np.array(cosphi_th)\n",
     "frame = pd.concat(li, axis=0)\n",
-    "frame_srt = frame.groupby(\"filename\")\n",
+    "frame_srt = frame.groupby(\"filename\",sort=False)\n",
     "\n",
-    "frame = pd.concat(li, axis=0)\n",
-    "frame_srt = frame.groupby(\"filename\")\n",
-    "frame.loc[frame[\"filename\"] == \"1_1\"]  # first way of selecting the right file\n",
-    "frame_set = frame.set_index(\"filename\")  # build a mul\n",
-    "\n",
-    "# converting to numpy arrays to plot: here full, in 72 MFPADs .unique()tiindex using the categories of filename\n",
-    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 0].to_numpy()  # phi\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 1].to_numpy()  # cos(theta)\n",
-    "counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:, 2].to_numpy()  # counts"
+    "for key, item in frame_srt:\n",
+    "    allnames.append(key)"
    ]
   },
   {
@@ -81,7 +77,7 @@
     "    col2 = lim2_low + np.divide(lim2_high-lim2_low , np.amax(col2)-np.amin(col2)) * (col2-np.amin(col2))\n",
     "    b=zip(col1,col2)\n",
     "    # b=np.around(b,3)\n",
-    "    return b\n"
+    "    return b"
    ]
   },
   {
@@ -94,8 +90,27 @@
     "cosphi_adj=list(remap(cosphi_th,-0.835,0.835,-165,165))\n",
     "cosphi_adj=np.around(cosphi_adj,3)\n",
     "\n",
-    "df=pd.DataFrame(cosphi_adj, columns=[\"ctheta\",\"phi\"])\n",
-    "df.loc[df[\"phi\"] == -15]"
+    "dfind=pd.DataFrame(cosphi_adj, columns=[\"ctheta\",\"phi\"])\n",
+    "dfind[\"item\"]=allnames\n",
+    "dfind.loc[dfind[\"phi\"] == -15]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#selecting the rght file according to the needs [\"filename\"] == \"x_x\"]\n",
+    "nitem=\"2_6\"\n",
+    "frame.loc[frame[\"filename\"] == nitem]  # first way of selecting the right file\n",
+    "frame_set = frame.set_index(\"filename\")  # build a mul\n",
+    "\n",
+    "# converting to numpy arrays to plot: here full, in 72 MFPADs .unique()tiindex using the categories of filename\n",
+    "phi = frame.loc[frame[\"filename\"] == nitem].iloc[:, 0].to_numpy()  # phi\n",
+    "ctheta = frame.loc[frame[\"filename\"] == nitem].iloc[:, 1].to_numpy()  # cos(theta)\n",
+    "counts = frame.loc[frame[\"filename\"] == nitem].iloc[:, 2].to_numpy()  # counts"
    ]
   },
   {
@@ -292,6 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fixed stripe\n",
     "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
     "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
     "                # width=500,\r\n",
