--- a/3D_MFPADs_CH9_experiment.ipynb
+++ b/3D_MFPADs_CH9_experiment.ipynb
@@ -47,17 +47,17 @@
     "loc = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/MFPADs_multinew_std\"\n",
     "\n",
     "#low old binning (wrong?) (12,6)\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "\n",
     "#high new binning (24,12)\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
@@ -336,7 +336,7 @@
     "#SMOOTHED by sigmax (ctheta) and sigmay (phi)\n",
     "# sigma phi (y) can be double the value of x \n",
     "\n",
-    "counts=smoothgauss(MFPAD_RCR[checkthis],0.3,0.6).reshape(-1)\n",
+    "counts=smoothgauss(MFPAD_RCR[checkthis],0.6,0.8).reshape(-1)\n",
     "xs = counts * np.sin(theta_rad) * np.cos(phi_rad)\n",
     "Xs = xs.reshape(p,c)\n",
     "ys = counts * np.sin(theta_rad) * np.sin(phi_rad)\n",
@@ -364,7 +364,7 @@
     "fig.show()\n",
     "\n",
     "figs = go.Figure(data=[go.Scatter3d(x=xs, y=ys, z=zs, mode='markers',\n",
-    "                    marker=dict( size=5,color=ds, colorscale='Viridis', opacity=1., showscale=True)\n",
+    "                    marker=dict( size=20,color=ds, colorscale='Viridis', opacity=1., showscale=True)\n",
     "                    # color set colours to an array/list of desired values  \n",
     "                    # show scale to show the legend according to the color\n",
     "                    )])\n",
@@ -383,15 +383,14 @@
     "\n",
     "fig2 = go.Figure(data=[delaunay_tri, point_trace])\n",
     "fig2.update_layout(width=500, height=500);\n",
-    "fig2.show()\n",
+    "# fig2.show()\n",
     "\n",
     "my_layout = dict(width=800, height=600,\n",
     "                 scene_camera_eye=dict(x=1.5, y=1.5, z=1), \n",
     "                 scene_aspectratio=dict(x=1.5, y=1.5, z=1))\n",
     "\n",
     "fig3d = go.Figure(data=[my_mesh3d, delaun_tri3d])\n",
-    "\n",
-    "fig3d.show()"
+    "# fig3d.show()"
    ]
   },
   {
@@ -400,10 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1,y1,z1,I1,J1,K1 = getamesh(xs,ys,zs,ds)\n",
+    "xn,yn,zn,In,Jn,Kn = getamesh(x,y,z,d)\n",
     "\n",
-    "fig1 = go.Figure(go.Mesh3d(x=x1, y=y1, z=z1, \n",
-    "                           i=I1, j=J1, k=K1, \n",
+    "fig1 = go.Figure(go.Mesh3d(x=xn, y=yn, z=zn, \n",
+    "                           i=In, j=Jn, k=Kn, \n",
     "                           intensity=d,\n",
     "                           colorscale=\"Viridis\",\n",
     "                           colorbar_len=0.75,\n",
@@ -419,7 +418,7 @@
     "                                             y=100,\n",
     "                                            z=1000)))\n",
     "fig1.update_layout(width=800, height=800)\n",
-    "fig1.show()\n"
+    "# fig1.show()\n"
    ]
   },
   {
@@ -451,28 +450,261 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "fig, axes = plt.subplots(6,12, figsize=(25, 12), sharex='col', sharey='row')\n",
-    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
-    "\n",
-    "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
-    "for i,ax in zip(range(72),axes.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,smoothgauss(MFPAD_RCL[i],0.6,0.6).T)\n",
-    "    \n",
-    "fig.tight_layout()\n",
-    "plt.show()"
+    "def lod_mesh_export(mesh, lods, extension, path):\n",
+    "    mesh_lods={}\n",
+    "    for i in lods:\n",
+    "        mesh_lod = mesh.simplify_quadric_decimation(i)\n",
+    "        o3d.io.write_triangle_mesh(path+\"lod_\"+str(i)+extension, mesh_lod)\n",
+    "        mesh_lods[i]=mesh_lod\n",
+    "    print(\"generation of \"+str(i)+\" LoD successful\")\n",
+    "    return mesh_lods"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import open3d as o3d\n",
+    "import trimesh\n",
+    "\n",
+    "sys.path.append('..')\n",
+    "import open3d_tutorial as o3dtut\n",
+    "\n",
+    "output_path=(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\OUTPUTS\\\\\")\n",
+    "\n",
+    "camera_loc=np.array([0.,0.,-1.])\n",
+    "mesh=[]\n",
+    "mesh = o3d.geometry.TriangleMesh()\n",
+    "pcd = o3d.geometry.PointCloud()\n",
+    "\n",
+    "\n",
+    "#load the point cloud\n",
+    "point_cloud=np.array([xs,ys,zs]).T\n",
+    "cloud = PyntCloud.from_instance(\"open3d\", pcd)\n",
+    "pcd.points = o3d.utility.Vector3dVector(point_cloud)\n",
+    "\n",
+    "kdtree = cloud.add_structure(\"kdtree\")\n",
+    "testc = cloud.get_neighbors(k=5)\n",
+    "\n",
+    "# alpha=np.log10(0.5)\n",
+    "alpha=0.03\n",
+    "\n",
+    "tetra_mesh, pt_map = o3d.geometry.TetraMesh.create_from_point_cloud(pcd)\n",
+    "mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_alpha_shape(pcd, alpha, tetra_mesh, pt_map) #it resturns zero for some reason\n",
+    "\n",
+    "# mesh.compute_vertex_normals()\n",
+    "\n",
+    "\n",
+    "#compute the normal\n",
+    "# pcd.normals = o3d.utility.Vector3dVector(point_cloudn)\n",
+    "# pcd.normals = o3d.utility.Vector3dVector(np.zeros((1, 3)))  # invalidate existing normals\n",
+    "# pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1,max_nn=4));\n",
+    "pcd.estimate_normals();\n",
+    "pcd.orient_normals_consistent_tangent_plane(5)\n",
+    "# pcd.orient_normals_towards_camera_location(camera_loc)\n",
+    "# pcd.orient_normals_to_align_with_direction([0.,1.,0.])\n",
+    "\n",
+    "#presetn in all approaches\n",
+    "distances = pcd.compute_nearest_neighbor_distance()\n",
+    "avg_dist = np.mean(distances)\n",
+    "\n",
+    "\n",
+    "#Poisson\n",
+    "poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=9, width=0, scale=4, linear_fit=True)\n",
+    "bbox = pcd.get_axis_aligned_bounding_box()\n",
+    "p_mesh_crop = poisson_mesh.crop(bbox)\n",
+    "# p_mesh_crop.compute_triangle_normals() # usually computed before rendering\n",
+    "# p_mesh_crop.compute_vertex_normals()\n",
+    "\n",
+    "\n",
+    "#Hull ball\n",
+    "radii = [0.08, 0.1, 0.2, 0.4]\n",
+    "radius = 1.5 * avg_dist\n",
+    "\n",
+    "bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector([radius, radius * 2]))\n",
+    "# bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector(radii))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "CLEANING THE TRIANGLES\n",
+    "arget_number_of_triangles (int) – The number of triangles that the simplified mesh should have. It is not guaranteed that this number will be reached.\n",
+    "maximum_error (float, optional, default=inf) – The maximum error where a vertex is allowed to be merged\n",
+    "boundary_weight (float, optional, default=1.0) – A weight applied to edge vertices used to preserve boundaries\n",
+    "'''\n",
+    "dec_mesh = bpa_mesh.simplify_quadric_decimation(100000)\n",
+    "dec_mesh.remove_degenerate_triangles()\n",
+    "# dec_mesh.remove_duplicated_triangles()\n",
+    "dec_mesh.remove_duplicated_vertices()\n",
+    "# dec_mesh.remove_non_manifold_edges()\n",
+    "\n",
+    "# p_mesh_crop =poisson_mesh.simplify_quadric_decimation(6000)\n",
+    "# p_mesh_crop.remove_unreferenced_vertices\n",
+    "# p_mesh_crop.remove_degenerate_triangles()\n",
+    "# p_mesh_crop.remove_duplicated_triangles()\n",
+    "# p_mesh_crop.remove_duplicated_vertices()\n",
+    "# p_mesh_crop.remove_non_manifold_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.asarray(poisson_mesh.vertices).T\n",
+    "xgo=np.asarray(poisson_mesh.vertices).T[0]\n",
+    "ygo=np.asarray(poisson_mesh.vertices).T[1]\n",
+    "zgo=np.asarray(poisson_mesh.vertices).T[2]\n",
+    "\n",
+    "dgo = np.sqrt(xgo**2+ygo**2+zgo**2)\n",
+    "\n",
+    "# asarray(poisson_mesh.triangles)\n",
+    "txgo=np.asarray(poisson_mesh.vertices).T[0]\n",
+    "tygo=np.asarray(poisson_mesh.vertices).T[1]\n",
+    "tzgo=np.asarray(poisson_mesh.vertices).T[2]\n",
+    "\n",
+    "# np.asarray(poisson_mesh.vertex_normals)\n",
+    "tigo=np.asarray(poisson_mesh.vertex_normals).T[0]\n",
+    "tjgo=np.asarray(poisson_mesh.vertex_normals).T[1]\n",
+    "tkgo=np.asarray(poisson_mesh.vertex_normals).T[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#designing the surface colour\n",
+    "#densities are the real density of features\n",
+    "densities = np.asarray(densities)\n",
+    "\n",
+    "density_colors = plt.get_cmap('plasma')((dgo - dgo.min()) / (dgo.max() - dgo.min()))\n",
+    "density_colors = density_colors[:, :3]\n",
+    "\n",
+    "poisson_mesh.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
+    "\n",
+    "# create the triangular mesh with the vertices and faces from open3d to be visualise with another software\n",
+    "tri_mesh = trimesh.Trimesh(np.asarray(dec_mesh.vertices), np.asarray(dec_mesh.triangles),vertex_normals=np.asarray(dec_mesh.vertex_normals))\n",
+    "tri_mesh_pois = trimesh.Trimesh(np.asarray(poisson_mesh.vertices), np.asarray(poisson_mesh.triangles),vertex_normals=np.asarray(poisson_mesh.vertex_normals))\n",
+    "# tri_mesh_pois_crop = trimesh.Trimesh(np.asarray(p_mesh_crop.vertices), np.asarray(p_mesh_crop.triangles),vertex_normals=np.asarray(p_mesh_crop.vertex_normals))\n",
+    "\n",
+    "# trimesh.convex.is_convex(dec_mesh)\n",
+    "\n",
+    "o3d.io.write_triangle_mesh(output_path+\"bpa_mesh.ply\", dec_mesh);\n",
+    "o3d.io.write_triangle_mesh(output_path+\"p_mesh_c.ply\", poisson_mesh);\n",
+    "# o3d.io.write_triangle_mesh(output_path+\"p_mesh_c.ply\", p_mesh_crop);\n",
+    "\n",
+    "# my_lods = lod_mesh_export(p_mesh_crop, [100000,50000,10000,1000,100], \".ply\", output_path)\n",
+    "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \".ply\", output_path)\n",
+    "\n",
+    "# o3d.visualization.draw_geometries([pcd, p_mesh_crop], mesh_show_back_face=True)\n",
+    "# o3d.visualization.draw_geometries([pcd, poisson_mesh],mesh_show_back_face=True)\n",
+    "# o3d.visualization.draw_geometries([pcd, poisson_mesh[100000]],point_show_normal=True)\n",
+    "\n",
+    "# tri_mesh_pois.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(p_mesh_crop)\n",
+    "type(tri_mesh_pois)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig4 = go.Figure(go.Mesh3d(x=txgo, y=tygo, z=tzgo, \n",
+    "                           i=tigo, j=tjgo, k=tkgo, \n",
+    "                           intensity=dgo,\n",
+    "                           colorscale=\"Viridis\",\n",
+    "                           colorbar_len=0.75,\n",
+    "                           flatshading=True,\n",
+    "                           lighting=dict(ambient=0.5,\n",
+    "                                         diffuse=1,\n",
+    "                                         fresnel=4,        \n",
+    "                                         specular=0.5,\n",
+    "                                         roughness=0.05,\n",
+    "                                         facenormalsepsilon=0,\n",
+    "                                         vertexnormalsepsilon=0),\n",
+    "                          lightposition=dict(x=100,\n",
+    "                                             y=100,\n",
+    "                                            z=1000)))\n",
+    "fig4.update_layout(width=800, height=800)\n",
+    "# fig4.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go scatters do not provide a legend\n",
+    "fig5 = go.Figure(data=[go.Scatter3d(x=xgo, y=ygo, z=zgo,\n",
+    "                    mode='markers',\n",
+    "                    marker=dict(\n",
+    "                        size=5,\n",
+    "                        color=dgo,            # set color to an array/list of desired values\n",
+    "                        colorscale='Viridis',   # choose a colorscale\n",
+    "                        opacity=1.,\n",
+    "                        showscale=True          # to show the legend according to the color\n",
+    "                   )\n",
+    "                )])\n",
+    "\n",
+    "fig5.update_layout(title=\"TFMeOx MFPADs poisson scattered\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig5.show()\n",
+    "\n",
+    "fig6 = go.Figure(data=[go.Scatter3d(x=xs, y=ys, z=zs,\n",
+    "                    mode='markers',\n",
+    "                    marker=dict(\n",
+    "                        size=5,\n",
+    "                        color=ds,            # set color to an array/list of desired values\n",
+    "                        colorscale='Viridis',   # choose a colorscale\n",
+    "                        opacity=1.,\n",
+    "                        showscale=True          # to show the legend according to the color\n",
+    "                   )\n",
+    "                )])\n",
+    "\n",
+    "fig6.update_layout(title=\"TFMeOx MFPADs smoothed scattered\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\n",
+    "\n",
+    "fig6.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit ('anaconda3': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit ('anaconda3': conda)"
   },
   "language_info": {
    "codemirror_mode": {
