updated path to DATA

--- a/3D_MFPADs_CH11_experiment.ipynb
+++ b/3D_MFPADs_CH11_experiment.ipynb
@@ -47,17 +47,17 @@
     "loc = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/MFPADs_multinew_std\"\n",
     "\n",
     "#low old binning (wrong?) (12,6)\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "\n",
     "#high new binning (24,12)\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
