--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -28,11 +28,11 @@
     "\n",
     "plt.style.use(hep.style.ROOT)  # For now ROOT defaults to CMS\n",
     "\n",
-    "path1 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV'  # use your path\n",
-    "path2 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=4.0eV'  # use your path\n",
-    "path3 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=6.1eV'  # use your path\n",
-    "path4 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=8.2eV'  # use your path\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11.5eV'  # use your path\n",
+    "path1 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=3.0eV'  # use your path\n",
+    "path2 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=4.0eV'  # use your path\n",
+    "path3 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=6.1eV'  # use your path\n",
+    "path4 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=8.2eV'  # use your path\n",
+    "path = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=11.5eV'  # use your path\n",
     "all_files = glob.glob(path + \"/*.dat\")\n",
     "\n",
     "li = []\n",
